fixed spacing issue on collection page

--- a/public/assets/css/front_fixes.css
+++ b/public/assets/css/front_fixes.css
@@ -133,12 +133,21 @@ left: 50%; margin-left: -15px;}
 .deal-listing .experience-grid li .flag.valign{top:7% !important;}
 .deal-detail-right .price-box h3.text-left+p{border-bottom: 0px solid #fff;}
 
+.deal-listing-left .widget.conc-mobile, .deal-listing.featured-variant .listing-cover-desc{ margin: 0px 0;}
+.deal-listing.featured-variant .listing-cover-desc .lead.intro-tag{ text-align:left; margin-bottom:0px; padding-bottom:10px;}
+.deal-listing .experience-grid li{ min-height: 360px; margin-bottom: 50px;}
+.deal-listing .experience-grid li .deal-desc{ margin-bottom: 61px !important;}
+
 img.alacate_banner_img_mob{}
 img.alacate_banner_img_main{}
 
 
 @media screen and (min-width: 768px){
 	.carousel-caption{ left: initial; right:9%;}
+}
+
+@media screen and (max-width: 720px){
+	.deal-listing .experience-grid li{ margin-bottom: 20px;}
 }
 
 /* Landscape */
